...
        <item>ビン</item>
        <item>カン</item>
        <item>ペットボトル</item>
        <item>古紙</item>
        <item>粗大ごみ</item>
        <item>資源ごみ</item>
        <item>自分で入力</item>
    </string-array>

    <string-array name="list_trash_id_select">
        <item>burn</item>
        <item>unburn</item>
        <item>plastic</item>
...
    <string name="text_common_exclude_day_button">共通例外日を設定</string>
    <string name="text_exclude_day_of_month_apply_button">設定</string>
    <string name="text_register_trash_button">登録</string>
    <string name="text_cancel_register_trash_button">キャンセル</string>
    <string name="text_trash_name_input_placeholder">ゴミの名前を入力</string>
    <string name="text_weekday_toggle_button">毎週</string>
    <string name="text_monthly_toggle_button">毎月</string>
    <string name="text_ordinal_weekday_toggle_button">固定の週と曜日</string>
    <string name="text_interval_weekday_toggle_button">隔週</string>

    <string name="message_noneTrash">今日出せるゴミはありません。</string>
    <string name="message_noneTrash_tomorrow">明日出せるゴミはありません。</string>
    <string name="message_invalid_input_trash_name_empty">ゴミの名前を入力してください</string>
    <string name="message_invalid_input_trash_name_invalid_char">利用できない文字が含まれています</string>
    <string name="message_invalid_input_trash_name_too_long">10文字以内で入力してください</string>
    <string name="message_complete_activation">認証されました。スケジュールを同期します。</string>
    <string name="message_complete_save_trash">ゴミ出し予定を登録しました</string>
    <string name="message_failed_save_trash">ゴミ出し予定の登録に失敗しました</string>
    <string name="message_failed_save_trash_exceed_max_schedule_count">登録に失敗しました。登録可能なゴミ出し予定は最大で10個までです。</string>
    <string name="message_failed_load_trash_list">一覧の読み込みに失敗しました</string>
    <string name="message_complete_delete_trash">ゴミ出し予定を削除しました</string>
    <string name="message_failed_delete_trash">ゴミ出し予定の削除に失敗しました</string>
    <string name="text_common_exclude_day_notice_line1">この画面の設定は全てのゴミに適用されます</string>
...
    <string name="title_schedule_search_notice_dialog">留意事項</string>
    <string name="text_schedule_search_notice">・AI取り込み機能であるため誤りを含む可能性があります。\n・現在登録済みのデータは削除されます。\n・住所を入力する際は番地等の詳細は入力しないでください。町名や丁目など、自治体で定められたゴミ出し予定の判別に必要十分な粒度で入力してください（例: 東京都新宿区西新宿2丁目）。\n・入力された情報はアプリ提供者側で一切保存・流用しません。また当機能に利用するAIは入力データの学習を無効化していますが、万が一当機能へのデータ入力により何らかの損害が発生した場合でもアプリ提供者は一切の責任を負いかねますのでご了承ください。</string>
    <string name="message_schedule_search_import_started">AI取り込みには数分かかる可能性があります。結果はゴミ出し予定一覧画面を開いて確認してください。</string>
    <string name="title_schedule_search_import_notification_success">ゴミ出し予定のAI取り込みが完了しました</string>
    <string name="title_schedule_search_import_notification_failure">ゴミ出し予定のAI取り込みに失敗しました</string>

    <string name="testTag_add_schedule_button">AddScheduleButton</string>
    <string name="testTag_delete_schedule_button">DeleteScheduleButton</string>
    <string name="testTag_register_trash_button">RegisterTrashButton</string>
    <string name="testTag_common_exclude_day_button">CommonExcludeDayButton</string>
    <string name="testTag_trash_type_dropdown">TrashTypeDropdown</string>
    <string name="testTag_trash_name_input">TrashNameInput</string>
    <string name="testTag_weekday_of_weekly_dropdown">WeekdayOfWeeklyDropdown</string>
    <string name="testTag_day_of_month_of_monthly_dropdown">DayOfMonthOfMonthlyDropdown</string>
    <string name="testTag_order_of_ordinal_weekly_dropdown">OrderOfOrdinalWeeklyDropdown</string>
    <string name="testTag_weekday_of_ordinal_weekly_dropdown">WeekdayOfOrdinalWeeklyDropdown</string>
    <string name="testTag_interval_of_interval_weekly_dropdown">IntervalOfIntervalWeeklyDropdown</string>
    <string name="testTag_weekday_of_interval_weekly_dropdown">WeekdayOfIntervalWeeklyDropdown</string>
    <string name="testTag_month_of_exclude_day_of_month_dropdown">MonthOfExcludeDayOfMonthDropdown</string>
    <string name="testTag_day_of_exclude_day_of_month_dropdown">DayOfExcludeDayOfMonthDropdown</string>
    <string name="testTag_add_exclude_day_of_month_button">AddExcludeDayOfMonthButton</string>
    <string name="testTag_add_common_exclude_day_button">AddCommonExcludeDayButton</string>
    <string name="testTag_delete_exclude_day_of_month_button">DeleteExcludeDayOfMonthButton</string>
    <string name="testTag_suffix_dropdown_menu_item">MenuItem</string>
...
